test/should-fail/变量数组-3.j
function test takes nothing returns nothing
    local integer i
    set i = i[1]
endfunction